test/commands/scan/tf-ecs-task-definition/out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- required-s3-tags / require-team-tag / (unknown) PASSED
Done
